<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_main"
            android:title="@string/drawer_main" />
        <item
            android:id="@+id/nav_associations"
            android:icon="@drawable/ic_assoc"
            android:title="@string/drawer_associations" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event"
            android:title="@string/drawer_events" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/drawer_calendar" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/drawer_chats" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/drawer_profile" />
        <item
            android:id="@+id/nav_admin_panel"
            android:icon="@drawable/user"
            android:title="@string/drawer_admin_panel" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_login_logout"
            android:title="@string/drawer_logout" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/drawer_about_us" />
    </group>
</menu>