<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AboutZuluzuluFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:src="@drawable/ic_about"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="38dp" />

    <TextView
        android:id="@+id/TV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="38dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="84dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/TV_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="111dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="34dp"
        android:layout_height="25dp"
        android:src="@mipmap/ic_launcher_round"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="111dp" />

    <TextView
        android:id="@+id/TV_devel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="168dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="31dp"
        android:layout_height="25dp"
        android:src="@android:drawable/ic_menu_myplaces"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="168dp" />

    <TextView
        android:id="@+id/TV_groupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Group"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="167dp" />

    <TextView
        android:id="@+id/TV_vesion_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numVersion"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="111dp" />

    <TextView
        android:id="@+id/TV_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="227dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/sym_action_email"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="227dp" />

    <TextView
        android:id="@+id/TV_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="288dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_login_logout"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="288dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_about"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="38dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:src="@drawable/ic_about"
        tools:layout_editor_absoluteX="256dp"
        tools:layout_editor_absoluteY="38dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="38dp"
        android:layout_height="39dp"
        android:src="@drawable/ic_about"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="38dp" />

    <TextView
        android:id="@+id/TV_name_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactEmail"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="227dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supportEmail"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="288dp" />
</android.support.constraint.ConstraintLayout>